--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "gray-matter": "^4.0.3",
+    "mongodb": "^5.1.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
